lab3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     block -> { block }
Rule 3     block -> block { block }
Rule 4     block -> block instruction
Rule 5     block -> instruction
Rule 6     instruction -> base_instruction ;
Rule 7     instruction -> if_statement
Rule 8     instruction -> loop_statement
Rule 9     base_instruction -> assign_expression
Rule 10    base_instruction -> keyword
Rule 11    assign_expression -> variable assign_op expression
Rule 12    variable -> ID
Rule 13    variable -> tensor_id
Rule 14    tensor_id -> ID [ sequence ]
Rule 15    sequence -> sequence , expression
Rule 16    sequence -> expression
Rule 17    expression -> result
Rule 18    expression -> ID
Rule 19    result -> INTEGER
Rule 20    result -> FLOAT
Rule 21    result -> STRING
Rule 22    result -> tensor
Rule 23    result -> tensor_id
Rule 24    tensor -> [ rows ]
Rule 25    rows -> rows ; sequence
Rule 26    rows -> sequence
Rule 27    expression -> - expression
Rule 28    expression -> ID '
Rule 29    expression -> ( expression ) '
Rule 30    expression -> ( expression )
Rule 31    expression -> expression + expression
Rule 32    expression -> expression - expression
Rule 33    expression -> expression * expression
Rule 34    expression -> expression / expression
Rule 35    expression -> expression DOTSUM expression
Rule 36    expression -> expression DOTDIV expression
Rule 37    expression -> expression DOTMUL expression
Rule 38    expression -> expression DOTSUB expression
Rule 39    expression -> function ( expression )
Rule 40    function -> EYE
Rule 41    function -> ZEROS
Rule 42    function -> ONES
Rule 43    keyword -> PRINT sequence
Rule 44    keyword -> BREAK
Rule 45    keyword -> CONTINUE
Rule 46    keyword -> RETURN expression
Rule 47    body -> instruction
Rule 48    body -> { block }
Rule 49    relation -> expression comp_operator expression
Rule 50    comp_operator -> >
Rule 51    comp_operator -> <
Rule 52    comp_operator -> EQ
Rule 53    comp_operator -> GEQ
Rule 54    comp_operator -> LEQ
Rule 55    comp_operator -> NEQ
Rule 56    if_statement -> IF ( relation ) body
Rule 57    if_statement -> IF ( relation ) body ELSE body
Rule 58    loop_statement -> while_statement
Rule 59    loop_statement -> for_statement
Rule 60    while_statement -> WHILE ( relation ) body
Rule 61    for_statement -> FOR ID = range body
Rule 62    range -> expression : expression
Rule 63    assign_op -> =
Rule 64    assign_op -> SUMASSIGN
Rule 65    assign_op -> DIVASSIGN
Rule 66    assign_op -> SUBASSIGN
Rule 67    assign_op -> MULASSIGN

Terminals, with rules where they appear

'                    : 28 29
(                    : 29 30 39 56 57 60
)                    : 29 30 39 56 57 60
*                    : 33
+                    : 31
,                    : 15
-                    : 27 32
/                    : 34
:                    : 62
;                    : 6 25
<                    : 51
=                    : 61 63
>                    : 50
BREAK                : 44
COMMENT              : 
CONTINUE             : 45
DIVASSIGN            : 65
DOTDIV               : 36
DOTMUL               : 37
DOTSUB               : 38
DOTSUM               : 35
ELSE                 : 57
EQ                   : 52
EYE                  : 40
FLOAT                : 20
FOR                  : 61
GEQ                  : 53
ID                   : 12 14 18 28 61
IF                   : 56 57
INTEGER              : 19
LEQ                  : 54
MULASSIGN            : 67
NEQ                  : 55
ONES                 : 42
PRINT                : 43
RETURN               : 46
STRING               : 21
SUBASSIGN            : 66
SUMASSIGN            : 64
WHILE                : 60
ZEROS                : 41
[                    : 14 24
]                    : 14 24
error                : 
{                    : 2 3 48
}                    : 2 3 48

Nonterminals, with rules where they appear

assign_expression    : 9
assign_op            : 11
base_instruction     : 6
block                : 1 2 3 3 4 48
body                 : 56 57 57 60 61
comp_operator        : 49
expression           : 11 15 16 27 29 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 46 49 49 62 62
for_statement        : 59
function             : 39
if_statement         : 7
instruction          : 4 5 47
keyword              : 10
loop_statement       : 8
program              : 0
range                : 61
relation             : 56 57 60
result               : 17
rows                 : 24 25
sequence             : 14 15 25 26 43
tensor               : 22
tensor_id            : 13 23
variable             : 11
while_statement      : 58

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . { block }
    (3) block -> . block { block }
    (4) block -> . block instruction
    (5) block -> . instruction
    (6) instruction -> . base_instruction ;
    (7) instruction -> . if_statement
    (8) instruction -> . loop_statement
    (9) base_instruction -> . assign_expression
    (10) base_instruction -> . keyword
    (56) if_statement -> . IF ( relation ) body
    (57) if_statement -> . IF ( relation ) body ELSE body
    (58) loop_statement -> . while_statement
    (59) loop_statement -> . for_statement
    (11) assign_expression -> . variable assign_op expression
    (43) keyword -> . PRINT sequence
    (44) keyword -> . BREAK
    (45) keyword -> . CONTINUE
    (46) keyword -> . RETURN expression
    (60) while_statement -> . WHILE ( relation ) body
    (61) for_statement -> . FOR ID = range body
    (12) variable -> . ID
    (13) variable -> . tensor_id
    (14) tensor_id -> . ID [ sequence ]

    {               shift and go to state 3
    IF              shift and go to state 10
    PRINT           shift and go to state 14
    BREAK           shift and go to state 15
    CONTINUE        shift and go to state 16
    RETURN          shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    ID              shift and go to state 20

    program                        shift and go to state 1
    block                          shift and go to state 2
    instruction                    shift and go to state 4
    base_instruction               shift and go to state 5
    if_statement                   shift and go to state 6
    loop_statement                 shift and go to state 7
    assign_expression              shift and go to state 8
    keyword                        shift and go to state 9
    while_statement                shift and go to state 11
    for_statement                  shift and go to state 12
    variable                       shift and go to state 13
    tensor_id                      shift and go to state 21

state 1

    (0) S' -> program .



state 2

    (1) program -> block .
    (3) block -> block . { block }
    (4) block -> block . instruction
    (6) instruction -> . base_instruction ;
    (7) instruction -> . if_statement
    (8) instruction -> . loop_statement
    (9) base_instruction -> . assign_expression
    (10) base_instruction -> . keyword
    (56) if_statement -> . IF ( relation ) body
    (57) if_statement -> . IF ( relation ) body ELSE body
    (58) loop_statement -> . while_statement
    (59) loop_statement -> . for_statement
    (11) assign_expression -> . variable assign_op expression
    (43) keyword -> . PRINT sequence
    (44) keyword -> . BREAK
    (45) keyword -> . CONTINUE
    (46) keyword -> . RETURN expression
    (60) while_statement -> . WHILE ( relation ) body
    (61) for_statement -> . FOR ID = range body
    (12) variable -> . ID
    (13) variable -> . tensor_id
    (14) tensor_id -> . ID [ sequence ]

    $end            reduce using rule 1 (program -> block .)
    {               shift and go to state 22
    IF              shift and go to state 10
    PRINT           shift and go to state 14
    BREAK           shift and go to state 15
    CONTINUE        shift and go to state 16
    RETURN          shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    ID              shift and go to state 20

    instruction                    shift and go to state 23
    base_instruction               shift and go to state 5
    if_statement                   shift and go to state 6
    loop_statement                 shift and go to state 7
    assign_expression              shift and go to state 8
    keyword                        shift and go to state 9
    while_statement                shift and go to state 11
    for_statement                  shift and go to state 12
    variable                       shift and go to state 13
    tensor_id                      shift and go to state 21

state 3

    (2) block -> { . block }
    (2) block -> . { block }
    (3) block -> . block { block }
    (4) block -> . block instruction
    (5) block -> . instruction
    (6) instruction -> . base_instruction ;
    (7) instruction -> . if_statement
    (8) instruction -> . loop_statement
    (9) base_instruction -> . assign_expression
    (10) base_instruction -> . keyword
    (56) if_statement -> . IF ( relation ) body
    (57) if_statement -> . IF ( relation ) body ELSE body
    (58) loop_statement -> . while_statement
    (59) loop_statement -> . for_statement
    (11) assign_expression -> . variable assign_op expression
    (43) keyword -> . PRINT sequence
    (44) keyword -> . BREAK
    (45) keyword -> . CONTINUE
    (46) keyword -> . RETURN expression
    (60) while_statement -> . WHILE ( relation ) body
    (61) for_statement -> . FOR ID = range body
    (12) variable -> . ID
    (13) variable -> . tensor_id
    (14) tensor_id -> . ID [ sequence ]

    {               shift and go to state 3
    IF              shift and go to state 10
    PRINT           shift and go to state 14
    BREAK           shift and go to state 15
    CONTINUE        shift and go to state 16
    RETURN          shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    ID              shift and go to state 20

    block                          shift and go to state 24
    instruction                    shift and go to state 4
    base_instruction               shift and go to state 5
    if_statement                   shift and go to state 6
    loop_statement                 shift and go to state 7
    assign_expression              shift and go to state 8
    keyword                        shift and go to state 9
    while_statement                shift and go to state 11
    for_statement                  shift and go to state 12
    variable                       shift and go to state 13
    tensor_id                      shift and go to state 21

state 4

    (5) block -> instruction .

    {               reduce using rule 5 (block -> instruction .)
    IF              reduce using rule 5 (block -> instruction .)
    PRINT           reduce using rule 5 (block -> instruction .)
    BREAK           reduce using rule 5 (block -> instruction .)
    CONTINUE        reduce using rule 5 (block -> instruction .)
    RETURN          reduce using rule 5 (block -> instruction .)
    WHILE           reduce using rule 5 (block -> instruction .)
    FOR             reduce using rule 5 (block -> instruction .)
    ID              reduce using rule 5 (block -> instruction .)
    $end            reduce using rule 5 (block -> instruction .)
    }               reduce using rule 5 (block -> instruction .)


state 5

    (6) instruction -> base_instruction . ;

    ;               shift and go to state 25


state 6

    (7) instruction -> if_statement .

    {               reduce using rule 7 (instruction -> if_statement .)
    IF              reduce using rule 7 (instruction -> if_statement .)
    PRINT           reduce using rule 7 (instruction -> if_statement .)
    BREAK           reduce using rule 7 (instruction -> if_statement .)
    CONTINUE        reduce using rule 7 (instruction -> if_statement .)
    RETURN          reduce using rule 7 (instruction -> if_statement .)
    WHILE           reduce using rule 7 (instruction -> if_statement .)
    FOR             reduce using rule 7 (instruction -> if_statement .)
    ID              reduce using rule 7 (instruction -> if_statement .)
    $end            reduce using rule 7 (instruction -> if_statement .)
    }               reduce using rule 7 (instruction -> if_statement .)
    ELSE            reduce using rule 7 (instruction -> if_statement .)


state 7

    (8) instruction -> loop_statement .

    {               reduce using rule 8 (instruction -> loop_statement .)
    IF              reduce using rule 8 (instruction -> loop_statement .)
    PRINT           reduce using rule 8 (instruction -> loop_statement .)
    BREAK           reduce using rule 8 (instruction -> loop_statement .)
    CONTINUE        reduce using rule 8 (instruction -> loop_statement .)
    RETURN          reduce using rule 8 (instruction -> loop_statement .)
    WHILE           reduce using rule 8 (instruction -> loop_statement .)
    FOR             reduce using rule 8 (instruction -> loop_statement .)
    ID              reduce using rule 8 (instruction -> loop_statement .)
    $end            reduce using rule 8 (instruction -> loop_statement .)
    }               reduce using rule 8 (instruction -> loop_statement .)
    ELSE            reduce using rule 8 (instruction -> loop_statement .)


state 8

    (9) base_instruction -> assign_expression .

    ;               reduce using rule 9 (base_instruction -> assign_expression .)


state 9

    (10) base_instruction -> keyword .

    ;               reduce using rule 10 (base_instruction -> keyword .)


state 10

    (56) if_statement -> IF . ( relation ) body
    (57) if_statement -> IF . ( relation ) body ELSE body

    (               shift and go to state 26


state 11

    (58) loop_statement -> while_statement .

    {               reduce using rule 58 (loop_statement -> while_statement .)
    IF              reduce using rule 58 (loop_statement -> while_statement .)
    PRINT           reduce using rule 58 (loop_statement -> while_statement .)
    BREAK           reduce using rule 58 (loop_statement -> while_statement .)
    CONTINUE        reduce using rule 58 (loop_statement -> while_statement .)
    RETURN          reduce using rule 58 (loop_statement -> while_statement .)
    WHILE           reduce using rule 58 (loop_statement -> while_statement .)
    FOR             reduce using rule 58 (loop_statement -> while_statement .)
    ID              reduce using rule 58 (loop_statement -> while_statement .)
    $end            reduce using rule 58 (loop_statement -> while_statement .)
    }               reduce using rule 58 (loop_statement -> while_statement .)
    ELSE            reduce using rule 58 (loop_statement -> while_statement .)


state 12

    (59) loop_statement -> for_statement .

    {               reduce using rule 59 (loop_statement -> for_statement .)
    IF              reduce using rule 59 (loop_statement -> for_statement .)
    PRINT           reduce using rule 59 (loop_statement -> for_statement .)
    BREAK           reduce using rule 59 (loop_statement -> for_statement .)
    CONTINUE        reduce using rule 59 (loop_statement -> for_statement .)
    RETURN          reduce using rule 59 (loop_statement -> for_statement .)
    WHILE           reduce using rule 59 (loop_statement -> for_statement .)
    FOR             reduce using rule 59 (loop_statement -> for_statement .)
    ID              reduce using rule 59 (loop_statement -> for_statement .)
    $end            reduce using rule 59 (loop_statement -> for_statement .)
    }               reduce using rule 59 (loop_statement -> for_statement .)
    ELSE            reduce using rule 59 (loop_statement -> for_statement .)


state 13

    (11) assign_expression -> variable . assign_op expression
    (63) assign_op -> . =
    (64) assign_op -> . SUMASSIGN
    (65) assign_op -> . DIVASSIGN
    (66) assign_op -> . SUBASSIGN
    (67) assign_op -> . MULASSIGN

    =               shift and go to state 28
    SUMASSIGN       shift and go to state 29
    DIVASSIGN       shift and go to state 30
    SUBASSIGN       shift and go to state 31
    MULASSIGN       shift and go to state 32

    assign_op                      shift and go to state 27

state 14

    (43) keyword -> PRINT . sequence
    (15) sequence -> . sequence , expression
    (16) sequence -> . expression
    (17) expression -> . result
    (18) expression -> . ID
    (27) expression -> . - expression
    (28) expression -> . ID '
    (29) expression -> . ( expression ) '
    (30) expression -> . ( expression )
    (31) expression -> . expression + expression
    (32) expression -> . expression - expression
    (33) expression -> . expression * expression
    (34) expression -> . expression / expression
    (35) expression -> . expression DOTSUM expression
    (36) expression -> . expression DOTDIV expression
    (37) expression -> . expression DOTMUL expression
    (38) expression -> . expression DOTSUB expression
    (39) expression -> . function ( expression )
    (19) result -> . INTEGER
    (20) result -> . FLOAT
    (21) result -> . STRING
    (22) result -> . tensor
    (23) result -> . tensor_id
    (40) function -> . EYE
    (41) function -> . ZEROS
    (42) function -> . ONES
    (24) tensor -> . [ rows ]
    (14) tensor_id -> . ID [ sequence ]

    ID              shift and go to state 36
    -               shift and go to state 37
    (               shift and go to state 38
    INTEGER         shift and go to state 40
    FLOAT           shift and go to state 41
    STRING          shift and go to state 42
    EYE             shift and go to state 45
    ZEROS           shift and go to state 46
    ONES            shift and go to state 47
    [               shift and go to state 48

    sequence                       shift and go to state 33
    expression                     shift and go to state 34
    result                         shift and go to state 35
    function                       shift and go to state 39
    tensor                         shift and go to state 43
    tensor_id                      shift and go to state 44

state 15

    (44) keyword -> BREAK .

    ;               reduce using rule 44 (keyword -> BREAK .)


state 16

    (45) keyword -> CONTINUE .

    ;               reduce using rule 45 (keyword -> CONTINUE .)


state 17

    (46) keyword -> RETURN . expression
    (17) expression -> . result
    (18) expression -> . ID
    (27) expression -> . - expression
    (28) expression -> . ID '
    (29) expression -> . ( expression ) '
    (30) expression -> . ( expression )
    (31) expression -> . expression + expression
    (32) expression -> . expression - expression
    (33) expression -> . expression * expression
    (34) expression -> . expression / expression
    (35) expression -> . expression DOTSUM expression
    (36) expression -> . expression DOTDIV expression
    (37) expression -> . expression DOTMUL expression
    (38) expression -> . expression DOTSUB expression
    (39) expression -> . function ( expression )
    (19) result -> . INTEGER
    (20) result -> . FLOAT
    (21) result -> . STRING
    (22) result -> . tensor
    (23) result -> . tensor_id
    (40) function -> . EYE
    (41) function -> . ZEROS
    (42) function -> . ONES
    (24) tensor -> . [ rows ]
    (14) tensor_id -> . ID [ sequence ]

    ID              shift and go to state 36
    -               shift and go to state 37
    (               shift and go to state 38
    INTEGER         shift and go to state 40
    FLOAT           shift and go to state 41
    STRING          shift and go to state 42
    EYE             shift and go to state 45
    ZEROS           shift and go to state 46
    ONES            shift and go to state 47
    [               shift and go to state 48

    expression                     shift and go to state 49
    result                         shift and go to state 35
    function                       shift and go to state 39
    tensor                         shift and go to state 43
    tensor_id                      shift and go to state 44

state 18

    (60) while_statement -> WHILE . ( relation ) body

    (               shift and go to state 50


state 19

    (61) for_statement -> FOR . ID = range body

    ID              shift and go to state 51


state 20

    (12) variable -> ID .
    (14) tensor_id -> ID . [ sequence ]

    =               reduce using rule 12 (variable -> ID .)
    SUMASSIGN       reduce using rule 12 (variable -> ID .)
    DIVASSIGN       reduce using rule 12 (variable -> ID .)
    SUBASSIGN       reduce using rule 12 (variable -> ID .)
    MULASSIGN       reduce using rule 12 (variable -> ID .)
    [               shift and go to state 52


state 21

    (13) variable -> tensor_id .

    =               reduce using rule 13 (variable -> tensor_id .)
    SUMASSIGN       reduce using rule 13 (variable -> tensor_id .)
    DIVASSIGN       reduce using rule 13 (variable -> tensor_id .)
    SUBASSIGN       reduce using rule 13 (variable -> tensor_id .)
    MULASSIGN       reduce using rule 13 (variable -> tensor_id .)


state 22

    (3) block -> block { . block }
    (2) block -> . { block }
    (3) block -> . block { block }
    (4) block -> . block instruction
    (5) block -> . instruction
    (6) instruction -> . base_instruction ;
    (7) instruction -> . if_statement
    (8) instruction -> . loop_statement
    (9) base_instruction -> . assign_expression
    (10) base_instruction -> . keyword
    (56) if_statement -> . IF ( relation ) body
    (57) if_statement -> . IF ( relation ) body ELSE body
    (58) loop_statement -> . while_statement
    (59) loop_statement -> . for_statement
    (11) assign_expression -> . variable assign_op expression
    (43) keyword -> . PRINT sequence
    (44) keyword -> . BREAK
    (45) keyword -> . CONTINUE
    (46) keyword -> . RETURN expression
    (60) while_statement -> . WHILE ( relation ) body
    (61) for_statement -> . FOR ID = range body
    (12) variable -> . ID
    (13) variable -> . tensor_id
    (14) tensor_id -> . ID [ sequence ]

    {               shift and go to state 3
    IF              shift and go to state 10
    PRINT           shift and go to state 14
    BREAK           shift and go to state 15
    CONTINUE        shift and go to state 16
    RETURN          shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    ID              shift and go to state 20

    block                          shift and go to state 53
    instruction                    shift and go to state 4
    base_instruction               shift and go to state 5
    if_statement                   shift and go to state 6
    loop_statement                 shift and go to state 7
    assign_expression              shift and go to state 8
    keyword                        shift and go to state 9
    while_statement                shift and go to state 11
    for_statement                  shift and go to state 12
    variable                       shift and go to state 13
    tensor_id                      shift and go to state 21

state 23

    (4) block -> block instruction .

    {               reduce using rule 4 (block -> block instruction .)
    IF              reduce using rule 4 (block -> block instruction .)
    PRINT           reduce using rule 4 (block -> block instruction .)
    BREAK           reduce using rule 4 (block -> block instruction .)
    CONTINUE        reduce using rule 4 (block -> block instruction .)
    RETURN          reduce using rule 4 (block -> block instruction .)
    WHILE           reduce using rule 4 (block -> block instruction .)
    FOR             reduce using rule 4 (block -> block instruction .)
    ID              reduce using rule 4 (block -> block instruction .)
    $end            reduce using rule 4 (block -> block instruction .)
    }               reduce using rule 4 (block -> block instruction .)


state 24

    (2) block -> { block . }
    (3) block -> block . { block }
    (4) block -> block . instruction
    (6) instruction -> . base_instruction ;
    (7) instruction -> . if_statement
    (8) instruction -> . loop_statement
    (9) base_instruction -> . assign_expression
    (10) base_instruction -> . keyword
    (56) if_statement -> . IF ( relation ) body
    (57) if_statement -> . IF ( relation ) body ELSE body
    (58) loop_statement -> . while_statement
    (59) loop_statement -> . for_statement
    (11) assign_expression -> . variable assign_op expression
    (43) keyword -> . PRINT sequence
    (44) keyword -> . BREAK
    (45) keyword -> . CONTINUE
    (46) keyword -> . RETURN expression
    (60) while_statement -> . WHILE ( relation ) body
    (61) for_statement -> . FOR ID = range body
    (12) variable -> . ID
    (13) variable -> . tensor_id
    (14) tensor_id -> . ID [ sequence ]

    }               shift and go to state 54
    {               shift and go to state 22
    IF              shift and go to state 10
    PRINT           shift and go to state 14
    BREAK           shift and go to state 15
    CONTINUE        shift and go to state 16
    RETURN          shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    ID              shift and go to state 20

    instruction                    shift and go to state 23
    base_instruction               shift and go to state 5
    if_statement                   shift and go to state 6
    loop_statement                 shift and go to state 7
    assign_expression              shift and go to state 8
    keyword                        shift and go to state 9
    while_statement                shift and go to state 11
    for_statement                  shift and go to state 12
    variable                       shift and go to state 13
    tensor_id                      shift and go to state 21

state 25

    (6) instruction -> base_instruction ; .

    {               reduce using rule 6 (instruction -> base_instruction ; .)
    IF              reduce using rule 6 (instruction -> base_instruction ; .)
    PRINT           reduce using rule 6 (instruction -> base_instruction ; .)
    BREAK           reduce using rule 6 (instruction -> base_instruction ; .)
    CONTINUE        reduce using rule 6 (instruction -> base_instruction ; .)
    RETURN          reduce using rule 6 (instruction -> base_instruction ; .)
    WHILE           reduce using rule 6 (instruction -> base_instruction ; .)
    FOR             reduce using rule 6 (instruction -> base_instruction ; .)
    ID              reduce using rule 6 (instruction -> base_instruction ; .)
    $end            reduce using rule 6 (instruction -> base_instruction ; .)
    }               reduce using rule 6 (instruction -> base_instruction ; .)
    ELSE            reduce using rule 6 (instruction -> base_instruction ; .)


state 26

    (56) if_statement -> IF ( . relation ) body
    (57) if_statement -> IF ( . relation ) body ELSE body
    (49) relation -> . expression comp_operator expression
    (17) expression -> . result
    (18) expression -> . ID
    (27) expression -> . - expression
    (28) expression -> . ID '
    (29) expression -> . ( expression ) '
    (30) expression -> . ( expression )
    (31) expression -> . expression + expression
    (32) expression -> . expression - expression
    (33) expression -> . expression * expression
    (34) expression -> . expression / expression
    (35) expression -> . expression DOTSUM expression
    (36) expression -> . expression DOTDIV expression
    (37) expression -> . expression DOTMUL expression
    (38) expression -> . expression DOTSUB expression
    (39) expression -> . function ( expression )
    (19) result -> . INTEGER
    (20) result -> . FLOAT
    (21) result -> . STRING
    (22) result -> . tensor
    (23) result -> . tensor_id
    (40) function -> . EYE
    (41) function -> . ZEROS
    (42) function -> . ONES
    (24) tensor -> . [ rows ]
    (14) tensor_id -> . ID [ sequence ]

    ID              shift and go to state 36
    -               shift and go to state 37
    (               shift and go to state 38
    INTEGER         shift and go to state 40
    FLOAT           shift and go to state 41
    STRING          shift and go to state 42
    EYE             shift and go to state 45
    ZEROS           shift and go to state 46
    ONES            shift and go to state 47
    [               shift and go to state 48

    relation                       shift and go to state 55
    expression                     shift and go to state 56
    result                         shift and go to state 35
    function                       shift and go to state 39
    tensor                         shift and go to state 43
    tensor_id                      shift and go to state 44

state 27

    (11) assign_expression -> variable assign_op . expression
    (17) expression -> . result
    (18) expression -> . ID
    (27) expression -> . - expression
    (28) expression -> . ID '
    (29) expression -> . ( expression ) '
    (30) expression -> . ( expression )
    (31) expression -> . expression + expression
    (32) expression -> . expression - expression
    (33) expression -> . expression * expression
    (34) expression -> . expression / expression
    (35) expression -> . expression DOTSUM expression
    (36) expression -> . expression DOTDIV expression
    (37) expression -> . expression DOTMUL expression
    (38) expression -> . expression DOTSUB expression
    (39) expression -> . function ( expression )
    (19) result -> . INTEGER
    (20) result -> . FLOAT
    (21) result -> . STRING
    (22) result -> . tensor
    (23) result -> . tensor_id
    (40) function -> . EYE
    (41) function -> . ZEROS
    (42) function -> . ONES
    (24) tensor -> . [ rows ]
    (14) tensor_id -> . ID [ sequence ]

    ID              shift and go to state 36
    -               shift and go to state 37
    (               shift and go to state 38
    INTEGER         shift and go to state 40
    FLOAT           shift and go to state 41
    STRING          shift and go to state 42
    EYE             shift and go to state 45
    ZEROS           shift and go to state 46
    ONES            shift and go to state 47
    [               shift and go to state 48

    expression                     shift and go to state 57
    result                         shift and go to state 35
    function                       shift and go to state 39
    tensor                         shift and go to state 43
    tensor_id                      shift and go to state 44

state 28

    (63) assign_op -> = .

    ID              reduce using rule 63 (assign_op -> = .)
    -               reduce using rule 63 (assign_op -> = .)
    (               reduce using rule 63 (assign_op -> = .)
    INTEGER         reduce using rule 63 (assign_op -> = .)
    FLOAT           reduce using rule 63 (assign_op -> = .)
    STRING          reduce using rule 63 (assign_op -> = .)
    EYE             reduce using rule 63 (assign_op -> = .)
    ZEROS           reduce using rule 63 (assign_op -> = .)
    ONES            reduce using rule 63 (assign_op -> = .)
    [               reduce using rule 63 (assign_op -> = .)


state 29

    (64) assign_op -> SUMASSIGN .

    ID              reduce using rule 64 (assign_op -> SUMASSIGN .)
    -               reduce using rule 64 (assign_op -> SUMASSIGN .)
    (               reduce using rule 64 (assign_op -> SUMASSIGN .)
    INTEGER         reduce using rule 64 (assign_op -> SUMASSIGN .)
    FLOAT           reduce using rule 64 (assign_op -> SUMASSIGN .)
    STRING          reduce using rule 64 (assign_op -> SUMASSIGN .)
    EYE             reduce using rule 64 (assign_op -> SUMASSIGN .)
    ZEROS           reduce using rule 64 (assign_op -> SUMASSIGN .)
    ONES            reduce using rule 64 (assign_op -> SUMASSIGN .)
    [               reduce using rule 64 (assign_op -> SUMASSIGN .)


state 30

    (65) assign_op -> DIVASSIGN .
